syntax = "proto3";

option go_package = "github.com/momentohq/client-sdk-go;client_sdk_go";
option java_multiple_files = true;
option java_package = "grpc.control_client";

package control_client;

service ScsControl {
  rpc CreateCache (_CreateCacheRequest) returns (_CreateCacheResponse) {}
  rpc DeleteCache (_DeleteCacheRequest) returns (_DeleteCacheResponse) {}
  rpc ListCaches (_ListCachesRequest) returns (_ListCachesResponse) {}
}

message _DeleteCacheRequest {
  string cache_name = 1;
}

message _DeleteCacheResponse {
}

message _CreateCacheRequest {
  string cache_name = 1;
}

message _CreateCacheResponse {
}

message _ListCachesRequest {
  string next_token = 1;
}

message _Cache {
  string cache_name = 1;
}

message _ListCachesResponse {
  repeated _Cache cache = 1;
  string next_token = 2;
}